# MultiAgent

./: .dockerignore  .gitattributes  Dockerfile  docker-compose.yml  flows.json  logging_config.py  main.py  pyproject.toml
DataQualityAgent/: __init__.py  data_quality_agent.py
IntegrationAgent/: __init__.py  generic_algorithm_agent.py  irrigation_agent.py
IrrigatorAgent/: __init__.py  irrigator_agent.py
ManagingАgents/: __init__.py  manager_agent.py
SensorAgent/: __init__.py  manager_agent.py  sensor_agent.py  sesnor_agent.py
StatusAgent/: __init__.py  agent_status.py
algorithms/: __init__.py  algorithm_contract.py  dailycache.py  data_quality.py  irrigation_algorithm.py  irrigator.py  time_normalizer.py
algorithms/metadata/: data_quality_metadata.json
algoritms/: __init__.py  irrigation_algorithm.py
ejabberd/conf/: ejabberd.yml  server.crt  server.key
test/: acceptance_tests_fixed_v3.py  test_data_quality_deep.py  test_irrigation_deep.py  test_multiagent_system.py
